[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.8", features = ["full"] }
napi        = { version = "2", features = ["async"] }
napi-derive = "2"
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
